--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -23,6 +23,10 @@ jobs:
           cache: npm
       - run: npm ci
       - run: npm run build
+      - uses: actions/upload-artifact@v4
+        with:
+          name: github-pages
+          path: dist/*
 
   deploy:
     needs: build
