Fix domain name and file permissions in dist/ folder for GH pages

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,6 +1,6 @@
 site:
   name: der-gitarrenbausatz.de
-  site: 'https://www.der-gitarrenbausatz.de'
+  site: 'https://der-gitarrenbausatz.de'
   base: '/'
   trailingSlash: false
 
