--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -23,6 +23,7 @@ jobs:
           cache: npm
       - run: npm ci
       - run: npm run build
+      - run: chmod -R 777 dist/*
       - uses: actions/upload-artifact@v4
         with:
           name: github-pages
