--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -23,11 +23,11 @@ jobs:
           cache: npm
       - run: npm ci
       - run: npm run build
-      - run: chmod -R 777 dist/*
-      - uses: actions/upload-artifact@v4
+      - name: Upload static files as artifact
+        id: deployment
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: github-pages
-          path: dist/*
+          path: dist/
 
   deploy:
     needs: build
