Rename title and der-gitarrenbausatz.de -> Der Gitarrenbausatz

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,5 +1,5 @@
 site:
-  name: der-gitarrenbausatz.de
+  name: Der Gitarrenbausatz
   site: 'https://der-gitarrenbausatz.de'
   base: '/'
   trailingSlash: false
